After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 769230 - Misc network fixes
Misc network fixes
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-07-27 15:38 UTC by Bastien Nocera
Modified: 2016-08-30 15:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
network: Fix warning when enabling hotspot (970 bytes, patch)
2016-07-27 15:38 UTC, Bastien Nocera
committed Details | Review
network: Fix saving of IPv6 gateway (902 bytes, patch)
2016-07-27 15:38 UTC, Bastien Nocera
committed Details | Review
network: Fix warning if IPv6 gateway is empty (1.19 KB, patch)
2016-07-27 15:39 UTC, Bastien Nocera
committed Details | Review
network: Fix IPv6 settings not being applicable when method changes (1.57 KB, patch)
2016-07-27 15:39 UTC, Bastien Nocera
committed Details | Review
network: Remove unused ->validate class implementations (2.19 KB, patch)
2016-07-27 15:39 UTC, Bastien Nocera
committed Details | Review
network: Return better error when 8021x security is invalid (1.50 KB, patch)
2016-07-27 15:39 UTC, Bastien Nocera
committed Details | Review
network: Avoid setting a GError if already set (1.37 KB, patch)
2016-07-27 15:39 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2016-07-27 15:38:46 UTC
See also https://bugzilla.gnome.org/show_bug.cgi?id=705546
Comment 1 Bastien Nocera 2016-07-27 15:38:51 UTC
Created attachment 332217 [details] [review]
network: Fix warning when enabling hotspot

GLib-GObject-WARNING **: g_object_set_valist: object class 'NMSettingWireless' has no property named 'security'
Comment 2 Bastien Nocera 2016-07-27 15:38:58 UTC
Created attachment 332218 [details] [review]
network: Fix saving of IPv6 gateway
Comment 3 Bastien Nocera 2016-07-27 15:39:04 UTC
Created attachment 332219 [details] [review]
network: Fix warning if IPv6 gateway is empty

GtkEntry doesn't like NULL text.
Comment 4 Bastien Nocera 2016-07-27 15:39:10 UTC
Created attachment 332220 [details] [review]
network: Fix IPv6 settings not being applicable when method changes

When changing the method from Manual to Automatic, we need to clear the
gateway setting, otherwise the settings verification will fail:
ipv6.gateway: gateway cannot be set if there are no addresses configured

Another fallout of the libnm 1.2 port
Comment 5 Bastien Nocera 2016-07-27 15:39:17 UTC
Created attachment 332221 [details] [review]
network: Remove unused ->validate class implementations

The implementation of ->validate in the parent class will return TRUE if
there's no implementation in the child class, so no need to implement
those.
Comment 6 Bastien Nocera 2016-07-27 15:39:24 UTC
Created attachment 332222 [details] [review]
network: Return better error when 8021x security is invalid

Rather than the generic "Invalid 802.1x security".
Comment 7 Bastien Nocera 2016-07-27 15:39:31 UTC
Created attachment 332223 [details] [review]
network: Avoid setting a GError if already set

If the wireless security is invalid, don't try to set the GError if the
ad-hoc mode is invalid as well.
Comment 8 Rui Matos 2016-08-15 13:05:46 UTC
Review of attachment 332217 [details] [review]:

ok
Comment 9 Rui Matos 2016-08-15 13:13:34 UTC
Review of attachment 332218 [details] [review]:

could also drop this variable since if text_gateway isn't valid we'll hit if (!ret) continue;
Comment 10 Rui Matos 2016-08-15 13:17:18 UTC
Review of attachment 332219 [details] [review]:

sure
Comment 11 Rui Matos 2016-08-15 13:24:48 UTC
Review of attachment 332220 [details] [review]:

could also be done unconditionally like we do nm_setting_ip_config_clear_addresses() to ensure a clean slate
Comment 12 Rui Matos 2016-08-15 13:27:31 UTC
Review of attachment 332221 [details] [review]:

++
Comment 13 Rui Matos 2016-08-15 13:32:25 UTC
Review of attachment 332222 [details] [review]:

right
Comment 14 Rui Matos 2016-08-15 13:40:36 UTC
Review of attachment 332223 [details] [review]:

yep
Comment 15 Bastien Nocera 2016-08-30 15:18:15 UTC
Attachment 332217 [details] pushed as cdb6a6c - network: Fix warning when enabling hotspot
Attachment 332218 [details] pushed as dc14602 - network: Fix saving of IPv6 gateway
Attachment 332219 [details] pushed as 94e2be8 - network: Fix warning if IPv6 gateway is empty
Attachment 332220 [details] pushed as a90dc60 - network: Fix IPv6 settings not being applicable when method changes
Attachment 332221 [details] pushed as 73a8d38 - network: Remove unused ->validate class implementations
Attachment 332222 [details] pushed as b0329f8 - network: Return better error when 8021x security is invalid
Attachment 332223 [details] pushed as 2a6706f - network: Avoid setting a GError if already set