network: Fix warning when enabling hotspot

GLib-GObject-WARNING **: g_object_set_valist: object class 'NMSettingWireless' has no property named 'security'

https://bugzilla.gnome.org/show_bug.cgi?id=769230